--- a/axit/scss/layout/_header.scss
+++ b/axit/scss/layout/_header.scss
@@ -127,7 +127,6 @@
 
         }
 
-
         li {
             a {
                 color: #848484;;
@@ -321,7 +320,22 @@
                 float: right;
                 vertical-align: middle;
                 margin-top: 30px;
-                max-width: 100%;
+                a {
+                    margin-right: 6%;
+                    &:last-child {
+                        margin-right: 0;
+
+
+                    }
+                    img {
+                        max-width: 100%;
+                    }
+                    @include ipadpro {
+                        margin-right: 6%;
+                    }
+
+                }
+
                 @include ipadpro {
                     margin-top: 50px;
                 }
