fix color, margin

--- a/axit/scss/page/_standard-picture.scss
+++ b/axit/scss/page/_standard-picture.scss
@@ -33,6 +33,7 @@
             }
             .standard-img {
                 max-width: 100%;
+                padding-left: 100px;
                 @include  ip6plus {
                     padding: 0;
                 }
