--- a/axit/scss/page/_sub-list.scss
+++ b/axit/scss/page/_sub-list.scss
@@ -13,7 +13,7 @@
             }
         }
         .sub-list-content {
-            padding: 0 0 0 170px;
+            padding: 0 0 0 150px;
             @include ipad {
                 padding-left: 40px;
             }
@@ -36,7 +36,7 @@
             }
             p {
                 font-size: 14px;
-                color: #c8c8ca;
+                color: #a4a5a8;
                 margin-bottom: 45px;
             }
             .paragraph-edit {
