--- a/axit/scss/page/_customer.scss
+++ b/axit/scss/page/_customer.scss
@@ -24,11 +24,11 @@
 
             .customer-saying {
                 .txt {
-                    padding: 20px 10px;
+                    padding: 20px 0 20px 10px;
                     background-color: #f5f5f5;
                     border-radius: 5px;
-                    width: 80%;
-                    color: #a9aaac;
+                    width: 77%;
+                    color: #86878b;
                     margin-bottom: 0;
                     @include ip6plus {
                         width: 100%;
@@ -57,7 +57,7 @@
 
                     }
                     p {
-                        color: #d9d9db;
+                        color: #86878b;
                     }
                 }
                 @include ip6plus {
