--- a/axit/scss/page/_pricing-option.scss
+++ b/axit/scss/page/_pricing-option.scss
@@ -58,13 +58,16 @@
                         padding-top: 20px;
                         font-size: 20px;
                         font-family: OpenSans-Bold, sans-serif;
+                        font-weight: bold;
                     }
                     .bottom-basic {
                         border-bottom: 5px solid #ff8b38;
                         background-color: #333333;
                         color: #666666;
-                        padding: 15px 0;
+                        padding: 0 0 15px 0;
                         @include css3-prefix('transition',1s);
+                        font-family: OpenSans-SemiBold, sans-serif;
+                        font-weight: 700;
                     }
                     img {
                         max-width: 100%;
@@ -73,6 +76,7 @@
                         background-color: #ffffff;
                         border-bottom: 2px solid #f5f5f5;
                         padding: 10px 0;
+                        color: #a4a5a8;
                     }
                 }
             }
@@ -91,16 +95,17 @@
                         padding-top: 20px;
                         font-size: 20px;
                         font-family: OpenSans-Bold, sans-serif;
+                        font-weight: bold;
 
                     }
-                    img {
-                        max-width: 100%;
-                    }
+
                     .bottom-professional {
                         background-color: #333333;
                         //border-bottom: 5px solid #ff8b38;
                         color: #666666;
-                        padding: 15px 0;
+                        padding: 0 0 15px 0;
+                        font-family: OpenSans-SemiBold, sans-serif;
+                        font-weight: 700;
                     }
                     .most-popular {
                         background-color: #ff8b38;
@@ -113,6 +118,7 @@
                         background-color: #ffffff;
                         border-bottom: 2px solid #f5f5f5;
                         padding: 10px 0;
+                        color: #a4a5a8;
                     }
                 }
             }
@@ -131,6 +137,7 @@
                         padding-top: 20px;
                         font-size: 20px;
                         font-family: OpenSans-Bold, sans-serif;
+                        font-weight: bold;
 
                     }
                     .balance-hover {
@@ -138,14 +145,20 @@
                         border-bottom: 5px solid #ff8b38;
                         background-color: #333333;
                     }
-                    img {
-                        max-width: 100%;
+                    .bottom-enterprise {
+                        background-color: #333333;
+                        border-bottom: 5px solid #ff8b38;
+                        color: #666666;
+                        padding: 0 0 15px 0;
+                        font-family: OpenSans-SemiBold, sans-serif;
+                        font-weight: 700;
+
                     }
                     .basic-row {
                         background-color: #ffffff;
                         border-bottom: 2px solid #f5f5f5;
                         padding: 10px 0;
-
+                        color: #a4a5a8;
                     }
                 }
             }
