--- a/axit/scss/page/_tab.scss
+++ b/axit/scss/page/_tab.scss
@@ -14,6 +14,9 @@
                 //border-left: 1px solid #ffffff;
                 //border-right: 1px solid #ffffff;
             }
+            .active {
+                background-color:  #ff8b38;
+            }
             li {
                 background-color: #000000;
                 border-bottom: 1px solid #ffffff;
