--- a/axit/scss/page/_awesome.scss
+++ b/axit/scss/page/_awesome.scss
@@ -40,6 +40,7 @@
                 h3 {
                     margin: 25px 0;
                     font-size: 20px;
+                    font-weight: 700;
                 }
             }
         }
