--- a/axit/scss/page/_customer.scss
+++ b/axit/scss/page/_customer.scss
@@ -23,11 +23,12 @@
         .customer-content {
 
             .customer-saying {
+                padding: 0 60px;
                 .txt {
                     padding: 20px 0 20px 10px;
                     background-color: #f5f5f5;
                     border-radius: 5px;
-                    width: 77%;
+                    width: 100%;
                     color: #86878b;
                     margin-bottom: 0;
                     @include ip6plus {
