--- a/axit/scss/page/_tab.scss
+++ b/axit/scss/page/_tab.scss
@@ -7,127 +7,136 @@
     }
 
     .container {
-        .tab-pills {
-            border: none;
-            text-align: center;
-            .border-left {
-                //border-left: 1px solid #ffffff;
-                //border-right: 1px solid #ffffff;
+        .col-sm-2 {
+            @include ip6plus {
+                padding: 0;
             }
-            .active {
-                background-color:  #ff8b38;
-            }
-            li {
-                background-color: #000000;
-                border-bottom: 1px solid #ffffff;
-                margin: auto;
-                @include css3-prefix('transition',0.5s);
-                &:hover {
-                    background-color: #ff8b38;
+            .tab-pills {
+                border: none;
+                text-align: center;
+                .border-left {
+                    //border-left: 1px solid #ffffff;
+                    //border-right: 1px solid #ffffff;
                 }
-                &:first-child {
-                    border-top-left-radius: 5px;
-                    border-top-right-radius: 5px;
-                    @include ip6plus {
-                        border-bottom-left-radius: 5px;
-                        border-bottom-right-radius: initial;
-                        border-top-right-radius: initial;
-
-
-                    }
+                .active {
+                    background-color:  #ff8b38;
                 }
-                &:last-child {
-                    border-bottom-left-radius: 5px;
-                    border-bottom-right-radius: 5px;
-                    @include ip6plus {
-                        border-bottom-left-radius: initial;
-                        border-bottom-right-radius: 5px;
-                        border-top-right-radius: 5px;
-                    }
-                }
-                @include ip6plus {
-                    width: 33.33%;
-                    padding: 0;
-                }
-
-
-                a {
-                    width: 110px;
-                    height: 110px;
-                    padding: 0;
-                    margin: 0;
-                    color: #ffffff;
-                    line-height: 110px;
-                    background-color: transparent;
-                    border: none;
-                    &:focus {
-                        background-color: #666666;
-                        border: transparent;
-                    }
+                li {
+                    background-color: #000000;
+                    border-bottom: 1px solid #ffffff;
+                    margin: auto;
+                    @include css3-prefix('transition',0.5s);
                     &:hover {
-                        background-color: transparent;
-                        border-color: transparent;
+                        background-color: #ff8b38;
                     }
-                    &:visited {
-                        background-color: transparent;
-                    }
-                    &:active {
-                        background-color: transparent;
-                    }
-                }
+                    &:first-child {
+                        border-top-left-radius: 5px;
+                        border-top-right-radius: 5px;
+                        @include ip6plus {
+                            border-bottom-left-radius: 5px;
+                            border-bottom-right-radius: initial;
+                            border-top-right-radius: initial;
 
+
+                        }
+                    }
+                    &:last-child {
+                        border-bottom-left-radius: 5px;
+                        border-bottom-right-radius: 5px;
+                        @include ip6plus {
+                            border-bottom-left-radius: initial;
+                            border-bottom-right-radius: 5px;
+                            border-top-right-radius: 5px;
+                        }
+                    }
+                    @include ip6plus {
+                        width: 33.33%;
+                        padding: 0;
+                    }
+
+
+                    a {
+                        width: 110px;
+                        height: 110px;
+                        padding: 0;
+                        margin: 0;
+                        color: #ffffff;
+                        line-height: 110px;
+                        background-color: transparent;
+                        border: none;
+                        font-weight: 700;
+                        &:focus {
+                            background-color: #666666;
+                            border: transparent;
+                        }
+                        &:hover {
+                            background-color: transparent;
+                            border-color: transparent;
+                        }
+                        &:visited {
+                            background-color: transparent;
+                        }
+                        &:active {
+                            background-color: transparent;
+                        }
+                    }
+
+                }
             }
-        }
-        .tab-building-img {
-            padding-left: 40px;
-            max-width: 100%;
-            margin: 30px auto;
-            @include ipadpro {
-                margin-top: 125px;
-            }
-            @include ip6plus {
-                padding: 0;
-                width: 100%;
-            }
-        }
-        .sub-tab-content {
-            padding-right: 60px;
-            padding-left: 40px;
-            @include ip6plus {
-                padding: 0;
-            }
-            h3 {
-                font-size: 20px;
-                margin: 10px 0 55px 0;
+            .tab-building-img {
+                padding-left: 30px;
+                max-width: 100%;
+                margin: 30px auto;
+                @include ipadpro {
+                    margin-top: 125px;
+                }
                 @include ip6plus {
-                    margin-bottom: 30px;
+                    padding: 0;
+                    width: 100%;
                 }
             }
-            p {
-                color: #86878b;
-                font-size: 14px;
+            .sub-tab-content {
+                padding-right: 60px;
+                padding-left: 40px;
+                @include ip6plus {
+                    padding: 0;
+                }
+                h3 {
+                    font-size: 20px;
+                    margin: 10px 0 55px 0;
+                    font-weight: 700;
+                    @include ip6plus {
+                        margin-bottom: 30px;
+                    }
+                }
+                p {
+                    color: #86878b;
+                    font-size: 14px;
+                }
+                .paragraph1 {
+                    margin-bottom: 20px;
+                }
+                .paragraph2 {
+                    margin-bottom: 50px;
+                }
+                button {
+                    background: #ff8b38;
+                    color: #ffffff;
+                    padding: 10px 30px;
+                    font-weight: 700;
+                    @include css3-prefix('transition', 0.5s);
+                    &:hover {
+                        color: #000000;
+                        //background-color: #ffffff;
+                    }
+                }
             }
-            .paragraph1 {
-                margin-bottom: 20px;
-            }
-            .paragraph2 {
-                margin-bottom: 50px;
-            }
-            button {
-                background: #ff8b38;
-                color: #ffffff;
-                padding: 10px 30px;
-                @include css3-prefix('transition', 0.5s);
-                &:hover {
-                    color: #000000;
-                    //background-color: #ffffff;
+            img {
+                @include ip6plus {
+                    margin-top: 40px;
                 }
             }
         }
-        img {
-            @include ip6plus {
-                margin-top: 40px;
-            }
-        }
+
     }
 }
