--- a/axit/scss/page/_styllish-axure.scss
+++ b/axit/scss/page/_styllish-axure.scss
@@ -21,7 +21,10 @@
             }
         }
         p {
-            margin: 50px 0 30px 0;
+            margin: 0 0 30px 0;
+            color: rgba(185,186,181,0.8);
+            font-family: Raleway,sans-serif;
+            font-weight: 300;
         }
         .border {
             margin: 25px auto;
@@ -34,6 +37,7 @@
             border: solid 2px #ffffff;
             padding: 10px 30px;
             font-weight: 700;
+            border-radius: 0;
             @include css3-prefix('transition', 0.5s);
             &:hover {
                 color: #000000;
