--- a/axit/css/main.css
+++ b/axit/css/main.css
@@ -3782,7 +3782,8 @@ html, body {
     .footer .footer-wrap p {
       margin-bottom: 0;
       margin-top: 10px;
-      text-align: center; }
+      text-align: center;
+      color: #808080; }
 
 .tab {
   background-color: #f5f5f5;
@@ -3793,7 +3794,8 @@ html, body {
       padding: 80px 0; } }
   @media only screen and (max-width: 414px) {
     .tab .container .col-sm-2 {
-      padding: 0; } }
+      padding: 0;
+      margin-bottom: 40px; } }
   .tab .container .col-sm-2 .tab-pills {
     border: none;
     text-align: center; }
@@ -3888,6 +3890,7 @@ html, body {
     color: #ffffff;
     padding: 10px 30px;
     font-weight: 700;
+    border-radius: 0;
     -webkit-transition: 0.5s;
     -khtml-transition: 0.5s;
     -moz-transition: 0.5s;
@@ -3949,32 +3952,37 @@ html, body {
   @media only screen and (max-width: 414px) {
     .standard-picture {
       padding: 80px 0; } }
-  .standard-picture .container .clearfix .standard-picture-content {
-    padding-right: 50px;
-    padding-top: 25px; }
-    .standard-picture .container .clearfix .standard-picture-content h3 {
-      margin: 0;
-      font-size: 20px;
-      font-family: OpenSans-Bold, sans-serif;
-      font-weight: bold; }
-    .standard-picture .container .clearfix .standard-picture-content .border {
-      margin: 25px 0;
-      border-bottom: solid 2px orange;
-      width: 65px; }
-    .standard-picture .container .clearfix .standard-picture-content p {
-      font-size: 14px;
-      color: #a6a7a9; }
-    .standard-picture .container .clearfix .standard-picture-content .paragraph-bottom {
-      margin-top: 25px; }
-    @media only screen and (max-width: 414px) {
-      .standard-picture .container .clearfix .standard-picture-content {
-        padding: 0; } }
-  .standard-picture .container .clearfix .standard-img {
-    max-width: 100%;
-    padding-left: 100px; }
-    @media only screen and (max-width: 414px) {
-      .standard-picture .container .clearfix .standard-img {
-        padding: 0; } }
+  .standard-picture .container .clearfix {
+    position: relative; }
+    .standard-picture .container .clearfix .standard-picture-content {
+      padding-right: 50px;
+      padding-top: 25px; }
+      .standard-picture .container .clearfix .standard-picture-content h3 {
+        margin: 0;
+        font-size: 20px;
+        font-family: OpenSans-Bold, sans-serif;
+        font-weight: bold; }
+      .standard-picture .container .clearfix .standard-picture-content .border {
+        margin: 25px 0;
+        border-bottom: solid 2px orange;
+        width: 65px; }
+      .standard-picture .container .clearfix .standard-picture-content p {
+        font-size: 14px;
+        color: #a6a7a9; }
+      .standard-picture .container .clearfix .standard-picture-content .paragraph-bottom {
+        margin-top: 25px; }
+      @media only screen and (max-width: 414px) {
+        .standard-picture .container .clearfix .standard-picture-content {
+          padding: 0; } }
+    .standard-picture .container .clearfix .standard-img {
+      max-width: 100%;
+      right: -80px; }
+      @media only screen and (max-width: 1024px) {
+        .standard-picture .container .clearfix .standard-img {
+          right: 0; } }
+      @media only screen and (max-width: 414px) {
+        .standard-picture .container .clearfix .standard-img {
+          padding: 0; } }
 
 .awesome {
   padding-top: 100px;
@@ -4061,8 +4069,7 @@ html, body {
         border-bottom: 1px solid #ffffff;
         background-color: #333333;
         color: #ffffff;
-        padding-bottom: 20px;
-        padding-top: 20px;
+        padding: 15px 0;
         font-size: 20px;
         font-family: OpenSans-Bold, sans-serif;
         font-weight: bold; }
@@ -4097,8 +4104,7 @@ html, body {
         border-bottom: 1px solid #ffffff;
         background-color: #333333;
         color: #ffffff;
-        padding-bottom: 20px;
-        padding-top: 20px;
+        padding: 15px 0;
         font-size: 20px;
         font-family: OpenSans, sans-serif;
         font-weight: 700; }
@@ -4113,7 +4119,7 @@ html, body {
         background-color: #ff8b38;
         color: #ffffff;
         font-size: 14px;
-        padding: 15px 0;
+        padding: 10px 0;
         font-family: OpenSans, sans-serif;
         font-weight: 700; }
       .pricing-option .container .clearfix .professional .professional-wrap .basic-row {
@@ -4131,8 +4137,7 @@ html, body {
         border-bottom: 1px solid #ffffff;
         background-color: #333333;
         color: #ffffff;
-        padding-bottom: 20px;
-        padding-top: 20px;
+        padding: 15px 0;
         font-size: 20px;
         font-family: OpenSans, sans-serif;
         font-weight: 700; }
@@ -4189,7 +4194,10 @@ html, body {
         .stylish-axure .stylish-axure-content h1 {
           font-size: 20px; } }
     .stylish-axure .stylish-axure-content p {
-      margin: 50px 0 30px 0; }
+      margin: 0 0 30px 0;
+      color: rgba(185, 186, 181, 0.8);
+      font-family: Raleway,sans-serif;
+      font-weight: 300; }
     .stylish-axure .stylish-axure-content .border {
       margin: 25px auto;
       border-bottom: solid 2px;
@@ -4200,6 +4208,7 @@ html, body {
       border: solid 2px #ffffff;
       padding: 10px 30px;
       font-weight: 700;
+      border-radius: 0;
       -webkit-transition: 0.5s;
       -khtml-transition: 0.5s;
       -moz-transition: 0.5s;
@@ -4219,18 +4228,20 @@ html, body {
       padding-top: 50px; } }
   .contact .container {
     text-align: center; }
-    .contact .container .contact-title h1 {
-      margin: 0; }
-      @media only screen and (max-width: 414px) {
-        .contact .container .contact-title h1 {
-          font-size: 20px; } }
-    .contact .container .contact-title .border {
-      margin: 25px auto;
-      border-bottom: solid 2px  orange;
-      width: 65px; }
-    .contact .container .contact-title p {
-      color: #97979b;
-      margin-bottom: 0; }
+    .contact .container .contact-title {
+      margin-bottom: 50px; }
+      .contact .container .contact-title h1 {
+        margin: 0; }
+        @media only screen and (max-width: 414px) {
+          .contact .container .contact-title h1 {
+            font-size: 20px; } }
+      .contact .container .contact-title .border {
+        margin: 25px auto;
+        border-bottom: solid 2px  #ff8b38;
+        width: 65px; }
+      .contact .container .contact-title p {
+        color: #97979b;
+        margin-bottom: 0; }
     .contact .container .clearfix {
       margin-bottom: 20px; }
       .contact .container .clearfix .info {
@@ -4256,7 +4267,7 @@ html, body {
         padding-left: 30px; }
         .contact .container .clearfix .message textarea {
           padding-top: 35px;
-          height: 189px;
+          height: 183px;
           width: 100%;
           max-width: 100%;
           background-color: #ffffff;
@@ -4277,6 +4288,7 @@ html, body {
       color: #ffffff;
       padding: 10px 30px;
       font-weight: 700;
+      border-radius: 0;
       -webkit-transition: 0.5s;
       -khtml-transition: 0.5s;
       -moz-transition: 0.5s;
@@ -4299,11 +4311,17 @@ html, body {
       color: #97979b;
       margin-bottom: 50px; }
     .customer .container .customer-title .border {
-      margin: 30px auto;
+      margin: 25px auto;
       border-bottom: solid 2px #ff8b38;
       width: 65px; }
   .customer .container .customer-content .customer-saying {
-    padding: 0 60px; }
+    padding: 0 40px; }
+    .customer .container .customer-content .customer-saying:first-child {
+      padding-left: 0;
+      padding-right: 80px; }
+    .customer .container .customer-content .customer-saying:last-child {
+      padding-right: 0;
+      padding-left: 80px; }
     .customer .container .customer-content .customer-saying .txt {
       padding: 20px 0 20px 10px;
       background-color: #f5f5f5;
