--- a/axit/scss/page/_customer.scss
+++ b/axit/scss/page/_customer.scss
@@ -14,7 +14,7 @@
                 margin-bottom: 50px;
             }
             .border {
-                margin: 30px auto;
+                margin: 25px auto;
                 border-bottom: solid 2px #ff8b38;
                 width: 65px;
 
@@ -23,7 +23,16 @@
         .customer-content {
 
             .customer-saying {
-                padding: 0 60px;
+                padding: 0 40px;
+                &:first-child {
+                    padding-left: 0;
+                    padding-right: 80px;
+                }
+                &:last-child {
+                    padding-right: 0;
+                    padding-left: 80px;
+                }
+
                 .txt {
                     padding: 20px 0 20px 10px;
                     background-color: #f5f5f5;
