--- a/axit/scss/page/_footer.scss
+++ b/axit/scss/page/_footer.scss
@@ -15,15 +15,13 @@
             text-align: center;
             a {
                 margin-right: 20px;
-
             }
-
-
         }
         p {
             margin-bottom: 0;
             margin-top: 10px;
             text-align: center;
+            color: #808080;
         }
     }
 }
